[package]
name = "whoops"
description = "Whoops! Nothing to see here. A cli tool for passing pipes through on failed execution"
version = "0.1.0"
authors = ["dmmuir <daniel.muir.14@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
